# scrabble

./: pyproject.toml
scrabble/: __main__.py  game.py
scrabble.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_scrabble.py
