[tool.poetry]
name = "Scrabble"
version = "0.1.0"
description = "Scrabble game"
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]

[tool.poetry.scripts]
scrabble = "scrabble.__main__:cli"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
